--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,16 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "x86_64")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(CMAKE_CXX_COMPILER_LAUNCHER "sccache")
+set(CMAKE_C_COMPILER_LAUNCHER "sccache")
 
 project(gay-wave-trail VERSION 1.0.0)
 
-add_library(${PROJECT_NAME} SHARED
-    src/main.cpp
-    # Add your cpp files here
+file(GLOB_RECURSE SOURCES
+  src/*.cpp
 )
+
+add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
 if (NOT DEFINED ENV{GEODE_SDK})
     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
