--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,10 @@ project(gay-wave-trail VERSION 1.0.0)
 
 file(GLOB_RECURSE SOURCES
   src/*.cpp
+  src/trail_customization/*.cpp
 )
 
-add_library(${PROJECT_NAME} SHARED ${SOURCES}
-        src/rainbow_trail.hpp
-        src/rainbow_trail.cpp)
+add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
 if (NOT DEFINED ENV{GEODE_SDK})
     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
