--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_OSX_ARCHITECTURES "x86_64")
+set(CMAKE_OSX_ARCHITECTURES "x64")
+set(CMAKE_GENERATOR_PLATFORM "x64")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(GEODE_LINK_NIGHTLY ON)
 
 project(gay-wave-trail VERSION 1.0.0)
 
@@ -10,6 +12,7 @@ file(GLOB_RECURSE SOURCES
         src/*.cpp
         src/utils/*.cpp
         src/trail_customization/*.cpp
+        src/settings/*.cpp
 )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
