--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,26 +2,24 @@ cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "x64")
-set(CMAKE_GENERATOR_PLATFORM "x64")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(GEODE_LINK_NIGHTLY ON)
 
 project(gay-wave-trail VERSION 1.0.0)
 
-file(GLOB_RECURSE SOURCES
-        src/*.cpp
-        src/utils/*.cpp
-        src/trail_customization/*.cpp
-        src/settings/*.cpp
-)
+file(GLOB_RECURSE SOURCES src/*.cpp src/utils/*.cpp
+     src/trail_customization/*.cpp src/settings/*.cpp)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
-if (NOT DEFINED ENV{GEODE_SDK})
-    message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
-else ()
-    message(STATUS "Found Geode: $ENV{GEODE_SDK}")
-endif ()
+if(NOT DEFINED ENV{GEODE_SDK})
+  message(
+    FATAL_ERROR
+      "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode"
+  )
+else()
+  message(STATUS "Found Geode: $ENV{GEODE_SDK}")
+endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 
