--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(GEODE_BINDINGS_REPO_PATH "D:\\Projects\\gay-wave-trail\\bindings\\")
 
 project(gay-wave-trail VERSION 1.0.0)
 
@@ -14,6 +15,9 @@ file(
   src/trail_customization/*.cpp
   src/settings/*.cpp
   src/ui/*.cpp
+  src/types/*.cpp
+  src/types/*.hpp
+  src/*.hpp
 )
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
