--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
+          bindings: "dupe-forks/geode-bindings"
+          build-config: RelWithDebInfo
           combine: true
           target: ${{ matrix.config.target }}
 
