--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
+set(CMAKE_OSX_ARCHITECTURES "arm64") # temporarily disabling x86_64 just to see if that's the whole problem
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
-set(Rust_RUSTUP_INSTALL_MISSING_TARGET ON)
 
 project(gay-wave-trail VERSION 1.0.0)
 add_subdirectory(tools/corrosion)
