use `include` dir instead of having headers in src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,20 @@ set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 project(GayWaveTrail VERSION 1.0.0)
 
-file(GLOB_RECURSE SOURCES src/**.cpp src/**.hpp)
+file(GLOB_RECURSE SOURCES src/**.cpp)
+
+include_directories(AFTER ${PROJECT_NAME} include)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
 
-if (NOT DEFINED ENV{GEODE_SDK})
-    message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
-else ()
+if(NOT DEFINED ENV{GEODE_SDK})
+    message(
+        FATAL_ERROR
+        "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode"
+    )
+else()
     message(STATUS "Found Geode: $ENV{GEODE_SDK}")
-endif ()
+endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 
