make trail outline use delta time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,19 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
-project(GayWaveTrail VERSION 1.0.0)
+project(GayWaveTrail VERSION 1.0.0 LANGUAGES CXX)
 
 file(GLOB_RECURSE SOURCES src/**.cpp)
 
 include_directories(AFTER ${PROJECT_NAME} include)
 
+add_compile_options(
+	$<$<COMPILE_LANGUAGE:CXX>:-Wall -Wextra -Wpedantic -Wno-reserved-id-macro -Wno-dollar-in-identifier-extension>
+)
+
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
+
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
 
 if(NOT DEFINED ENV{GEODE_SDK})
     message(
